<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting"
    style="@style/SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppBar"
            app:title="@string/settings" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingMenuItem"
                android:text="@string/dark_theme" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                style="@style/Switch"
                android:text="Switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingMenuItem"
                android:text="@string/share" />

            <ImageView
                style="@style/IconColor"
                android:src="@drawable/share"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingMenuItem"
                android:text="@string/write_support" />

            <ImageView
                style="@style/IconColor"
                android:src="@drawable/support" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingMenuItem"
                android:text="@string/agreement" />

            <ImageView
                style="@style/IconColor"
                android:src="@drawable/arrow" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>