<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/SettingActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".track.TrackActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/AppBar" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/track_logo"
            android:layout_width="wrap_content"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/track_name"
            style="@style/TrackNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_logo" />

        <TextView
            android:id="@+id/track_group"
            style="@style/TrackGroupStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_name" />


        <ImageView
            android:id="@+id/add_album"
            android:layout_width="51dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/add_album" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"

            app:layout_constraintBottom_toBottomOf="@+id/add_album"
            app:layout_constraintEnd_toStartOf="@+id/favorite"
            app:layout_constraintStart_toEndOf="@+id/add_album"
            app:layout_constraintTop_toBottomOf="@id/track_group"
            app:srcCompat="@drawable/play" />

        <TextView
            android:id="@+id/last_duration"
            style="@style/TrackGroupStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp"
            android:text="0:30"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="51dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/play"
            app:srcCompat="@drawable/favorite" />


        <TextView
            android:id="@+id/duration"
            style="@style/TrackDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/last_duration" />

        <TextView
            android:id="@+id/duration_track"
            style="@style/TrackDescriptionInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/last_duration" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="album,album_track" />

        <TextView
            android:id="@+id/album"
            style="@style/TrackDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/duration_track" />

        <TextView
            android:id="@+id/album_track"
            style="@style/TrackDescriptionInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/duration_track" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/year_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="year,year_track" />

        <TextView
            android:id="@+id/year"
            style="@style/TrackDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/year_track"
            style="@style/TrackDescriptionInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/album" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/genre_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="genre,genre_track" />

        <TextView
            android:id="@+id/genre"
            style="@style/TrackDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/genre_track"
            style="@style/TrackDescriptionInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/country_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="country,country_track" />

        <TextView
            android:id="@+id/country"
            style="@style/TrackDescriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/genre_track" />

        <TextView
            android:id="@+id/country_track"
            style="@style/TrackDescriptionInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/genre_track" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
